--- a/A Introduction to Machine Learning.ipynb
+++ b/A Introduction to Machine Learning.ipynb
@@ -24,6 +24,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Warm-up Task(s)\n",
+    "1. Please answer the morning question at http://PollEv.com/ginasprint096\n",
+    "1. Write a function to compute m and b for our \"y = 2x + some noise\" data\n",
+    "    * $m = \\frac{\\sum_{i=1}^{n}(x_i - \\bar{x})(y_i - \\bar{y})}{\\sum_{i=1}^{n}(x_i - \\bar{x})^2}$\n",
+    "1. Using an assert statement test your m and b against SciPy's `slope` and `intercept`: https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.linregress.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Today \n",
+    "* Announcements\n",
+    "    * Go over IQ3\n",
+    "    * RQ5 is posted and due Monday\n",
+    "    * PA3 is due Thursday. Questions?\n",
+    "* Finish linear regression\n",
+    "* Start U4-Supervised-Learning!!\n",
+    "* IQ4 on Thursday on Jupyter Notebook/Markdown/Latex\n",
+    "    * For extra practice, complete my tasks in [`H Notebook Lab.ipynb`](https://github.com/GonzagaCPSC322/U3-Data-Analysis/blob/master/H%20Notebook%20Lab.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Machine Learning\n",
     "At a high level, machine learning is building and using models that are learned from data. Machine learning is a subset of artificial intelligence, and it greatly overlaps with data mining. Let's see the \"unofficial\" definitions for these areas from Wikipedia:\n",
     "* [Data mining](https://en.wikipedia.org/wiki/Data_mining): The computational process of discovering patterns in large data sets involving methods at the intersection of artificial intelligence, machine learning, statistics, and database systems. It is an interdisciplinary subfield of computer science. The overall goal of the data mining process is to extract information from a data set and transform it into an understandable structure for further use.\n",
@@ -47,7 +73,7 @@
     "\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Supervised_machine_learning_in_a_nutshell.svg/2000px-Supervised_machine_learning_in_a_nutshell.svg.png\" width=\"650\">\n",
     "\n",
-    "(image from [https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Supervised_machine_learning_in_a_nutshell.svg/2000px-Supervised_machine_learning_in_a_nutshell.svg.png](https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Supervised_machine_learning_in_a_nutshell.svg/2000px-Supervised_machine_learning_in_a_nutshell.svg.png))\n",
+    "(image from https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Supervised_machine_learning_in_a_nutshell.svg/2000px-Supervised_machine_learning_in_a_nutshell.svg.png)\n",
     "\n",
     "### Training\n",
     "As an example, suppose you are trying to teach someone (say a student) who has no notion of a cat or dog, the concept of cat vs. dog. You might first show the student some pictures of cats and say, \"these are cats\". Then you might show the person some pictures of dogs and say, \"these are dogs\". The set of cat and dog images is called the *training set*, a set of labeled examples (e.g. *instances*). For example, consider the following cat vs. dog training set:\n",
@@ -74,7 +100,7 @@
     "### Testing\n",
     "Now, suppose we want to apply the student's learned conception of dog vs. cat by providing the student with a new, unseen example:\n",
     "\n",
-    "<img src=\"https://raw.githubusercontent.com/GonzagaCPSC322/U4-Supervised-Learning/figures/cat_or_dog.png\" width=\"150\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/GonzagaCPSC322/U4-Supervised-Learning/master/figures/cat_or_dog.png\" width=\"150\"/>\n",
     "\n",
     "Based on the above features, this image has the tongue out (dog), light fur color (cat), and ears up (cat). Thus our student would likely classify this image as a cat. But wait! We (the expert supervisors) know this is a dog (a puppy, but a dog none the less). Our training set didn't include any images that were as borderline cat/dog as this testing example. As you can see, the examples that comprise your training set and the features that are utilized greatly impact the accuracy of the learner, and consequently the model that is built. "
    ]
@@ -115,17 +141,17 @@
     "\n",
     "Here are our cat-dog training examples sorted in order based on the feature fur color:\n",
     "\n",
-    "<img src=\"https://raw.githubusercontent.com/GonzagaCPSC322/U4-Supervised-Learning/figures/cat_dog_fur_ordering.png\" width=\"500\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/GonzagaCPSC322/U4-Supervised-Learning/master/figures/cat_dog_fur_ordering.png\" width=\"500\"/>\n",
     "\n",
     "We could apply a clustering algorithm, such as $k$-means clustering, to the data to reveal two natural groups in the data ($k = 2$):\n",
     "\n",
-    "<img src=\"https://raw.githubusercontent.com/GonzagaCPSC322/U4-Supervised-Learning/figures/cat_dog_grouping.png\" width=\"500\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/GonzagaCPSC322/U4-Supervised-Learning/master/figures/cat_dog_grouping.png\" width=\"500\"/>\n",
     "\n",
     "Note that these two groups, blue and red, are not representative of cat and dog, since we have no cat/dog labels!\n",
     "\n",
     "Now, upon seeing a new instance, we can determine the new instance's membership to either the blue group or the red group:\n",
     "\n",
-    "<img src=\"https://raw.githubusercontent.com/GonzagaCPSC322/U4-Supervised-Learning/figures/cat_dog_membership.png\" width=\"500\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/GonzagaCPSC322/U4-Supervised-Learning/master/figures/cat_dog_membership.png\" width=\"500\"/>\n",
     "\n",
     "Like supervised machine learning, there are several unsupervised machine learning algorithms."
    ]
@@ -148,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
