fix unknown character error

--- a/C Classifier Evaluation.ipynb
+++ b/C Classifier Evaluation.ipynb
@@ -319,8 +319,8 @@
     "* Why these percentages?\n",
     "    * Each row has a $1/D$ chance of being selected\n",
     "    * Each row has a (1 - 1/D) chance of not being selected\n",
-    "    * We select $D$ times, so probability a row not chosen at all is $(1 − 1/D)^D$\n",
-    "    * For large $D$, the probability approaches $e^{−1} = 0.368$ (for $e = 2.718...$)\n",
+    "    * We select $D$ times, so probability a row not chosen at all is $(1 - 1/D)^D$\n",
+    "    * For large $D$, the probability approaches $e^{-1} = 0.368$ (for $e = 2.718$...)\n",
     "* The sampling procedure is repeated $k$ times\n",
     "    * Each iteration uses the test set for an accuracy estimate"
    ]
