--- a/A Introduction to Machine Learning.ipynb
+++ b/A Introduction to Machine Learning.ipynb
@@ -28,11 +28,7 @@
     "1. Please answer the morning question at http://PollEv.com/ginasprint096\n",
     "1. Write a function to compute $m$ and $b$ for our \"y = 2x + some noise\" data\n",
     "$$m = \\frac{\\sum_{i=1}^{n}(x_i - \\bar{x})(y_i - \\bar{y})}{\\sum_{i=1}^{n}(x_i - \\bar{x})^2}$$\n",
-    "    * Use an assert statement test your $m$ and $b$ against SciPy's `slope` and `intercept`: https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.linregress.html\n",
-    "1. Write a function to compute the correlation coefficient $r$\n",
-    "$$r = \\frac{\\sum_{i=1}^{n}(x_i - \\bar{x})(y_i - \\bar{y})}{\\sqrt{\\sum_{i=1}^{n}(x_i - \\bar{x})^2 \\sum_{i=1}^{n}(y_i - \\bar{y})^2}}$$\n",
-    "    * Use an assert statement test your $r$ against SciPy's `rvalue`: https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.linregress.html\n",
-    "    * Add more/less noise to our y values. How does this affect $r$?"
+    "    * Use an assert statement test your $m$ and $b$ against SciPy's `slope` and `intercept`: https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.linregress.html"
    ]
   },
   {
