--- a/B Nearest Neighbor Classification.ipynb
+++ b/B Nearest Neighbor Classification.ipynb
@@ -21,6 +21,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Warm-up Task(s)\n",
+    "1. Finish our trace of kNN to make a class prediction for the unseen instance (3, 7)\n",
+    "1. Create a new directory in your container called ClassificationFun\n",
+    "    * In main.py, copy and paste the following table. Then write a `compute_distance()` function that accepts two feature vectors and returns the Euclidean distance between them.\n",
+    "\n",
+    "```python\n",
+    "train = [\n",
+    "        [3, 2, \"no\"],\n",
+    "        [6, 6, \"yes\"],\n",
+    "        [4, 1, \"no\"],\n",
+    "        [4, 4, \"no\"],\n",
+    "        [1, 2, \"yes\"],\n",
+    "        [2, 0, \"no\"],\n",
+    "        [0, 3, \"yes\"],\n",
+    "        [1, 6, \"yes\"]\n",
+    "    ]\n",
+    "test = [2, 3]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Today \n",
+    "* Announcements\n",
+    "    * No RQ this week\n",
+    "    * PA3 is due tonight. Questions?\n",
+    "    * PA4 is posted\n",
+    "* kNN and how to divide a dataset into training/testing sets\n",
+    "* Last ~15 mins of class: IQ4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Nearest Neighbor Classification\n",
     "Nearest neighbor classification is typically used when attributes are continuous\n",
     "* Can be modified for categorical data ...\n",
