--- a/B Nearest Neighbor Classification.ipynb
+++ b/B Nearest Neighbor Classification.ipynb
@@ -51,7 +51,7 @@
     "    * PA3 is due tonight. Questions?\n",
     "    * PA4 is posted\n",
     "* kNN and how to divide a dataset into training/testing sets\n",
-    "* Last ~15 mins of class: IQ4"
+    "* IQ4 last ~15 mins of class"
    ]
   },
   {
