--- a/B Nearest Neighbor Classification.ipynb
+++ b/B Nearest Neighbor Classification.ipynb
@@ -23,22 +23,27 @@
    "source": [
     "## Warm-up Task(s)\n",
     "1. Finish our trace of kNN to make a class prediction for the unseen instance (3, 7)\n",
-    "1. Create a new directory in your container called ClassificationFun\n",
-    "    * In main.py, copy and paste the following table. Then write a `compute_distance()` function that accepts two feature vectors and returns the Euclidean distance between them.\n",
+    "1. Create a new directory in your container called ClassificationFun and add a main.py\n",
+    "    * Write a `compute_euclidan_distance(v1, v2)` function that accepts two feature vectors and returns the Euclidean distance between them.\n",
+    "    * Consider the following labeled dataset, represented as the lists below. Assume the two attributes have been normalized by scaling to a value between 0 and 10.\n",
+    "    * Copy and paste the following lists. Then, compute the distance between each train instance and the test instance. What are the three closest neighbors of the following instance and how would you classify it?\n",
+    "        * Note: together we will test our implementation against SciPy (https://docs.scipy.org/doc/scipy/reference/generated/scipy.spatial.distance.euclidean.html)\n",
     "\n",
     "```python\n",
+    "header = [\"att1\", \"att2\"]\n",
     "train = [\n",
-    "        [3, 2, \"no\"],\n",
-    "        [6, 6, \"yes\"],\n",
-    "        [4, 1, \"no\"],\n",
-    "        [4, 4, \"no\"],\n",
-    "        [1, 2, \"yes\"],\n",
-    "        [2, 0, \"no\"],\n",
-    "        [0, 3, \"yes\"],\n",
-    "        [1, 6, \"yes\"]\n",
-    "    ]\n",
+    "    [3, 2],\n",
+    "    [6, 6],\n",
+    "    [4, 1],\n",
+    "    [4, 4],\n",
+    "    [1, 2],\n",
+    "    [2, 0],\n",
+    "    [0, 3],\n",
+    "    [1, 6]\n",
+    "]\n",
+    "train_labels = [\"no\", \"yes\", \"no\", \"no\", \"yes\", \"no\", \"yes\", \"yes\"]\n",
     "test = [2, 3]\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -49,7 +54,7 @@
     "* Announcements\n",
     "    * No RQ this week\n",
     "    * PA3 is due tonight. Questions?\n",
-    "    * PA4 is posted\n",
+    "    * PA4 is posted. Please read through it this weekend and try to complete part 1 steps 1 and 2. We will finish what you need for the rest of PA4 on Tuesday and I'd be happy to take questions.\n",
     "* kNN and how to divide a dataset into training/testing sets\n",
     "* IQ4 last ~15 mins of class"
    ]
@@ -182,7 +187,7 @@
     "    return label\n",
     "```\n",
     "\n",
-    "## kNN Example\n",
+    "## kNN Example 1\n",
     "Example adapted from [this kNN example](https://people.revoledu.com/kardi/tutorial/KNN/KNN_Numerical-example.html)\n",
     "\n",
     "Suppose we have the following dataset that has two attributes (acid durability and strength) and a class attribute (whether a special paper tissue is good or not):\n",
@@ -214,6 +219,29 @@
     "* Especially true as the number of attributes (\"dimensions\") increases\n",
     "    * An example of the \"curse of dimensionality\"\n",
     "* Again, have to use common sense and an understanding of the dataset\n",
+    "\n",
+    "## kNN Example 2\n",
+    "Consider the following labeled dataset, where result denotes class information and the remaining columns have continuous values. Assume the data has been normalized by scaling to a value between 0 and 10.\n",
+    "\n",
+    "|att1|att2|result|\n",
+    "|-|-|-|\n",
+    "|3|2|no|\n",
+    "|6|6|yes|\n",
+    "|4|1|no|\n",
+    "|4|4|no|\n",
+    "|1|2|yes|\n",
+    "|2|0|no|\n",
+    "|0|3|yes|\n",
+    "|1|6|yes|\n",
+    "\n",
+    "Assume we have the following instance to classify using $k$-NN for $k$ = 3 with \"majority voting\" to determine the class label from the k closest neighbors. \n",
+    "\n",
+    "|att1|att2|result|\n",
+    "|-|-|-|\n",
+    "|2|3|?|\n",
+    "\n",
+    "1. What are the three closest neighbors of the following instance?\n",
+    "1. How would you classify it?\n",
     "\n",
     "### Efficiency issues\n",
     "Q: Is k-NN efficient? Can you find any efficiency issues?\n",
