--- a/C Classifier Evaluation.ipynb
+++ b/C Classifier Evaluation.ipynb
@@ -23,31 +23,24 @@
    "metadata": {},
    "source": [
     "## Warm-up Task(s)\n",
-    "Consider the following labeled dataset, where result denotes class information and the remaining columns have continuous values. Assume the data has been normalized by scaling to a value between 0 and 10.\n",
-    "\n",
-    "|att1|att2|result|\n",
-    "|-|-|-|\n",
-    "|3|2|no|\n",
-    "|6|6|yes|\n",
-    "|4|1|no|\n",
-    "|4|4|no|\n",
-    "|1|2|yes|\n",
-    "|2|0|no|\n",
-    "|0|3|yes|\n",
-    "|1|6|yes|\n",
-    "\n",
-    "Assume we have the following instance to classify using $k$-NN for $k$ = 3 with \"majority voting\" to determine the class label from the k closest neighbors. \n",
-    "\n",
-    "|att1|att2|result|\n",
-    "|-|-|-|\n",
-    "|2|3|?|\n",
-    "\n",
-    "1. What are the three closest neighbors of the following instance and how would you classify it?\n",
-    "2. Create a main.py in a folder called ClassificationFun OR grab my ClassificationFun/main.py from Github U4 repo\n",
-    "    1. Store the above table in a 2D list\n",
-    "    1. Define a Euclidean distance function\n",
-    "    1. Programmatically add a column to the table called `distance` and compute each instance's distance to our test instance\n",
-    "    1. We will pick it up here!"
+    "In ClassificationFun/main.py:\n",
+    "1. Write a function called `randomize_in_place(data, parallel_list=None)` that accepts at least one list and shuffles the elements of the list. If a second list is passed in, it should be shuffled in the same order.\n",
+    "1. Make a copy of the `train` and `train_labels` lists. Pass them into your function and make sure they get shuffled in parallel :)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Today \n",
+    "* Announcements\n",
+    "    * Let's go over IQ4\n",
+    "    * IQ5 on Thursday on data visualization and PA3 topics\n",
+    "    * RQ5 is posted and due on Monday\n",
+    "    * PA4 is posted and due next Wednesday, 3/10.\n",
+    "* ClassificationFun\n",
+    "* Classifier evaluation metrics\n",
+    "* Go over PA4"
    ]
   },
   {
